--- a/Assignment_1/nlp1.ipynb
+++ b/Assignment_1/nlp1.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "6b58f7b3-54ee-4b0d-bbb9-b6983e212559",
    "metadata": {
     "scrolled": true
@@ -155,7 +155,7 @@
     "with open(output_file, \"w\", encoding=\"utf-8\") as fout:\n",
     "    json.dump(paragraphs, fout, ensure_ascii=False, indent=2)\n",
     "\n",
-    "print(f\"\\n✅ Done. Written {count_written} paragraphs to {output_file}\")\n"
+    "print(f\"\\nDone. Written {count_written} paragraphs to {output_file}\")\n"
    ]
   },
   {
