--- a/Assignment_1/nlp1.ipynb
+++ b/Assignment_1/nlp1.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "c5e913c3",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "73332d82-011a-4860-b2a5-8d5817cb085a",
    "metadata": {},
    "outputs": [],
@@ -39,12 +39,12 @@
     "def word_tokenizer(sentence):\n",
     "    word_pattern = re.compile(\n",
     "        r'[\\u0900-\\u097F]+|'\n",
-    "        r'\\d+\\.\\d+|'\n",
-    "        r'\\d+|'\n",
-    "        r'[\\w\\.-]+@[\\w\\.-]+|'\n",
-    "        r'\\w+://\\S+|'\n",
-    "        r'[^\\s\\w]',\n",
-    "        re.UNICODE\n",
+    "        r'\\d+\\.\\d+|' #floating point\n",
+    "        r'\\d+|' #integer\n",
+    "        r'[\\w\\.-]+@[\\w\\.-]+|' #email-address\n",
+    "        r'\\w+://\\S+|' #URL\n",
+    "        r'[^\\s\\w]', #punctuation and special characters\n",
+    "        re.UNICODE #to match hindi chars\n",
     "    )\n",
     "    return word_pattern.findall(sentence)\n",
     "\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "84b57de5-88e7-490c-a43f-c38d17fce820",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
       "Scanned 1800 entries, written 901 paragraphs...\n",
       "Scanned 1900 entries, written 951 paragraphs...\n",
       "\n",
-      "✅ Done. Written 1000 paragraphs to tokenized_hi.json\n"
+      "Done. Written 1000 paragraphs to tokenized_hi.json\n"
      ]
     }
    ],
@@ -119,7 +119,7 @@
     "import json\n",
     "\n",
     "paragraphs = []\n",
-    "count_written = 0\n",
+    "count = 0\n",
     "\n",
     "for i, item in enumerate(ds):\n",
     "    if count_written >= 1000:\n",
@@ -131,7 +131,7 @@
     "\n",
     "    sentence_texts = sentence_tokenizer(text)\n",
     "    paragraph = {\n",
-    "        \"paragraph_id\": count_written,\n",
+    "        \"paragraph_id\": count,\n",
     "        \"sentences\": []\n",
     "    }\n",
     "\n",
@@ -148,20 +148,70 @@
     "        count_written += 1\n",
     "\n",
     "    if i % 100 == 0:\n",
-    "        print(f\"Scanned {i} entries, written {count_written} paragraphs...\")\n",
+    "        print(f\"{count} paragraphs done\")\n",
     "\n",
     "# Save to JSON file\n",
     "output_file = \"tokenized_hi.json\"\n",
     "with open(output_file, \"w\", encoding=\"utf-8\") as fout:\n",
     "    json.dump(paragraphs, fout, ensure_ascii=False, indent=2)\n",
     "\n",
-    "print(f\"\\nDone. Written {count_written} paragraphs to {output_file}\")\n"
+    "print(f\"\\nDone. Written {count} paragraphs to {output_file}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "e68a4262",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Corpus Statistics:\n",
+      "i.   Total number of sentences       : 3220\n",
+      "ii.  Total number of words           : 60340\n",
+      "iii. Total number of characters      : 230732\n",
+      "iv.  Average sentence length         : 18.74 words/sentence\n",
+      "v.   Average word length             : 3.82 characters/word\n",
+      "vi.  Type/Token Ratio (TTR)          : 0.1660\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"tokenized_hi.json\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    data = json.load(f)\n",
+    "\n",
+    "total_sentences = 0\n",
+    "total_words = 0\n",
+    "total_characters = 0\n",
+    "unique_tokens = set()\n",
+    "\n",
+    "for para in data:\n",
+    "    for sentence in para[\"sentences\"]:\n",
+    "        tokens = sentence[\"tokens\"]\n",
+    "        total_sentences += 1\n",
+    "        total_words += len(tokens)\n",
+    "        total_characters += sum(len(token) for token in tokens)\n",
+    "        unique_tokens.update(tokens)\n",
+    "\n",
+    "avg_sentence_length = total_words / total_sentences if total_sentences else 0\n",
+    "avg_word_length = total_characters / total_words if total_words else 0\n",
+    "ttr = len(unique_tokens) / total_words if total_words else 0\n",
+    "\n",
+    "print(\"Corpus Statistics:\")\n",
+    "print(f\"1)   Total number of sentences       : {total_sentences}\")\n",
+    "print(f\"2)  Total number of words           : {total_words}\")\n",
+    "print(f\"3) Total number of characters      : {total_characters}\")\n",
+    "print(f\"4)  Average sentence length         : {avg_sentence_length:.2f} words/sentence\")\n",
+    "print(f\"5)   Average word length             : {avg_word_length:.2f} characters/word\")\n",
+    "print(f\"6)  Type/Token Ratio (TTR)          : {ttr:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "402e5c53",
    "metadata": {},
    "outputs": [],
    "source": []
