--- a/Assignment_1/nlp1.ipynb
+++ b/Assignment_1/nlp1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "a82251dc-1b63-4523-97f6-9a3e58063f76",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "c5e913c3",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "73332d82-011a-4860-b2a5-8d5817cb085a",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "84b57de5-88e7-490c-a43f-c38d17fce820",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "6b58f7b3-54ee-4b0d-bbb9-b6983e212559",
    "metadata": {
     "scrolled": true
@@ -90,26 +90,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scanned 0 entries, written 1 paragraphs...\n",
-      "Scanned 100 entries, written 51 paragraphs...\n",
-      "Scanned 200 entries, written 101 paragraphs...\n",
-      "Scanned 300 entries, written 151 paragraphs...\n",
-      "Scanned 400 entries, written 201 paragraphs...\n",
-      "Scanned 500 entries, written 251 paragraphs...\n",
-      "Scanned 600 entries, written 301 paragraphs...\n",
-      "Scanned 700 entries, written 351 paragraphs...\n",
-      "Scanned 800 entries, written 401 paragraphs...\n",
-      "Scanned 900 entries, written 451 paragraphs...\n",
-      "Scanned 1000 entries, written 501 paragraphs...\n",
-      "Scanned 1100 entries, written 551 paragraphs...\n",
-      "Scanned 1200 entries, written 601 paragraphs...\n",
-      "Scanned 1300 entries, written 651 paragraphs...\n",
-      "Scanned 1400 entries, written 701 paragraphs...\n",
-      "Scanned 1500 entries, written 751 paragraphs...\n",
-      "Scanned 1600 entries, written 801 paragraphs...\n",
-      "Scanned 1700 entries, written 851 paragraphs...\n",
-      "Scanned 1800 entries, written 901 paragraphs...\n",
-      "Scanned 1900 entries, written 951 paragraphs...\n",
+      "1 paragraphs done\n",
+      "51 paragraphs done\n",
+      "101 paragraphs done\n",
+      "151 paragraphs done\n",
+      "201 paragraphs done\n",
+      "251 paragraphs done\n",
+      "301 paragraphs done\n",
+      "351 paragraphs done\n",
+      "401 paragraphs done\n",
+      "451 paragraphs done\n",
+      "501 paragraphs done\n",
+      "551 paragraphs done\n",
+      "601 paragraphs done\n",
+      "651 paragraphs done\n",
+      "701 paragraphs done\n",
+      "751 paragraphs done\n",
+      "801 paragraphs done\n",
+      "851 paragraphs done\n",
+      "901 paragraphs done\n",
+      "951 paragraphs done\n",
       "\n",
       "Done. Written 1000 paragraphs to tokenized_hi.json\n"
      ]
@@ -122,7 +122,7 @@
     "count = 0\n",
     "\n",
     "for i, item in enumerate(ds):\n",
-    "    if count_written >= 1000:\n",
+    "    if count >= 1000:\n",
     "        break\n",
     "\n",
     "    text = item.get(\"text\", \"\").strip()\n",
@@ -145,7 +145,7 @@
     "\n",
     "    if paragraph[\"sentences\"]:\n",
     "        paragraphs.append(paragraph)\n",
-    "        count_written += 1\n",
+    "        count += 1\n",
     "\n",
     "    if i % 100 == 0:\n",
     "        print(f\"{count} paragraphs done\")\n",
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "e68a4262",
    "metadata": {},
    "outputs": [
@@ -169,12 +169,12 @@
      "output_type": "stream",
      "text": [
       "Corpus Statistics:\n",
-      "i.   Total number of sentences       : 3220\n",
-      "ii.  Total number of words           : 60340\n",
-      "iii. Total number of characters      : 230732\n",
-      "iv.  Average sentence length         : 18.74 words/sentence\n",
-      "v.   Average word length             : 3.82 characters/word\n",
-      "vi.  Type/Token Ratio (TTR)          : 0.1660\n"
+      "1)   Total number of sentences       : 3220\n",
+      "2)  Total number of words           : 60340\n",
+      "3) Total number of characters      : 230732\n",
+      "4)  Average sentence length         : 18.74 words/sentence\n",
+      "5)   Average word length             : 3.82 characters/word\n",
+      "6)  Type/Token Ratio (TTR)          : 0.1660\n"
      ]
     }
    ],
