--- a/Assignment_2/nlp1.ipynb
+++ b/Assignment_2/nlp1.ipynb
@@ -12,13 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "7bf6a64d",
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_valid_english_word(word):\n",
-    "    pattern = r'^[a-zA-Z][a-z]*$'\n",
+    "    pattern = r'^[a-z][a-z]*$'\n",
     "\n",
     "    if re.fullmatch(pattern, word):\n",
     "        return \"Accepted\"\n",
