--- a/Assignment_2/nlp1.ipynb
+++ b/Assignment_2/nlp1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "29fe6b14",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7bf6a64d",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "e7653c2f",
    "metadata": {},
    "outputs": [
@@ -36,14 +36,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dog House --> Not Accepted\n"
+      "dog -> Accepted\n"
      ]
     }
    ],
    "source": [
     "user_input = input(\"Enter a word: \").strip()\n",
     "result = is_valid_english_word(user_input)\n",
-    "print(f\"{user_input} --> {result}\")"
+    "print(f\"{user_input} -> {result}\")"
    ]
   }
  ],
