--- a/Assignment_1/nlp1.ipynb
+++ b/Assignment_1/nlp1.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "c5e913c3",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "73332d82-011a-4860-b2a5-8d5817cb085a",
    "metadata": {},
    "outputs": [],
@@ -42,6 +42,7 @@
     "        r'\\d+\\.\\d+|' #floating point\n",
     "        r'\\d+|' #integer\n",
     "        r'[\\w\\.-]+@[\\w\\.-]+|' #email-address\n",
+    "        r'[\\w\\.-]+@(\\w+\\.)+(com|in|org)|'\n",
     "        r'\\w+://\\S+|' #URL\n",
     "        r'[^\\s\\w]', #punctuation and special characters\n",
     "        re.UNICODE #to match hindi chars\n",
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "6b58f7b3-54ee-4b0d-bbb9-b6983e212559",
    "metadata": {
     "scrolled": true
@@ -150,7 +151,6 @@
     "    if i % 100 == 0:\n",
     "        print(f\"{count} paragraphs done\")\n",
     "\n",
-    "# Save to JSON file\n",
     "output_file = \"tokenized_hi.json\"\n",
     "with open(output_file, \"w\", encoding=\"utf-8\") as fout:\n",
     "    json.dump(paragraphs, fout, ensure_ascii=False, indent=2)\n",
