--- a/Assignment_2/nlp2.ipynb
+++ b/Assignment_2/nlp2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "173450dd",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,6 @@
     "                        self.valid_nouns.add(noun)\n",
     "\n",
     "    def stem(self, word: str) -> str:\n",
-    "        # Try to get the singular form by removing common plural suffixes\n",
     "        if word in self.irregular_plurals:\n",
     "            return self.irregular_plurals[word]\n",
     "        if word.endswith('ies') and len(word) > 3:\n",
@@ -54,20 +53,21 @@
     "        word = word.strip().lower()\n",
     "        if not word:\n",
     "            return \"Invalid Word\"\n",
-    "        # First, try to stem the word to get its singular form\n",
-    "        stemmed = self.stem(word)\n",
-    "        # If the original word is in the irregular singulars, it's plural\n",
+    "        \n",
+    "        stemmed = self.stem(word) #singular form\n",
+    "\n",
+    "        #original word in the irregular singulars -> plural\n",
     "        if word in self.irregular_singulars:\n",
     "            if stemmed in self.valid_nouns:\n",
-    "                return f\"{word} = {stemmed}+N+PL\"\n",
+    "                return f\"{word} = {stemmed} + N + PL\"\n",
     "            else:\n",
     "                return \"Invalid Word\"\n",
-    "        # If the stemmed word is a valid noun and the original word is not the same as the stemmed, it's plural\n",
+    "        #stemmed word is a valid noun, original word is not the same as the stemmed -> plural\n",
     "        if stemmed in self.valid_nouns and word != stemmed:\n",
-    "            return f\"{word} = {stemmed}+N+PL\"\n",
-    "        # If the word itself is a valid noun, it's singular\n",
+    "            return f\"{word} = {stemmed} + N + PL\"\n",
+    "        #word itself is a valid noun -> singular\n",
     "        if word in self.valid_nouns:\n",
-    "            return f\"{word} = {word}+N+SG\"\n",
+    "            return f\"{word} = {word} + N + SG\"\n",
     "        return \"Invalid Word\"\n",
     "\n",
     "    def demonstrate_rules(self):\n",
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "2f28d8de",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,8 @@
      "output_type": "stream",
      "text": [
       "Enter a word to analyze (type 'quit' to exit):\n",
-      "Analysis: flies = fly+N+PL\n"
+      "Analysis: flies = fly + N + PL\n",
+      "Analysis: dog = dog + N + SG\n"
      ]
     }
    ],
@@ -102,6 +103,14 @@
     "    fst = NounMorphologyStemmer(brown_nouns_file)\n",
     "    fst.demonstrate_rules()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd39d530",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
